# mini-wiki

./: .gitignore  README.md  pyproject.toml  setup.py  tag.md
pywiki/: __main__.py  cli.py  config.py
pywiki/core/: builder.py  filesys.py  md_html.py  tags.py
pywiki/templates/: index_page.html  wiki_page.html
pywiki/templates/themes/default_dark/: index.css  wiki.css
