[tool.poetry]
name = "pywiki"
version = "0.1.0"
description = ""
authors = ["Timofey Neyenburg <neyenburgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.4.1"
jinja2 = "^3.1.2"
pygments = "^2.14.0"
watchdog = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
